Update PH Mechanics Lab 3.ipynb
fixed error propagation equation, thank you debanik!

--- a/PH Mechanics Lab 3.ipynb
+++ b/PH Mechanics Lab 3.ipynb
@@ -312,7 +312,7 @@
    ],
    "source": [
     "dt = 0.1; dy =1\n",
-    "dv = dt/t_bounce1 + dy/y_bounce1\n",
+    "dv = (dt/t_bounce1 + dy/y_bounce1) # * velocity\n",
     "print(dv)"
    ]
   },
