--- a/PH 1100 Lab 4.ipynb
+++ b/PH 1100 Lab 4.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lab 4 Collisions and conservation of Momentum. "
+    "Lab 4 Collisions and conservation of Momentum. This notebook is for the Lab 4R, the remote lab. For a review of the code you need in Lab 4 in person please see lab 1 in the github. There you can find information about how to propogate the error. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f55f981fb70>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f788a83ed68>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f55f946fba8>]"
+       "[<matplotlib.lines.Line2D at 0x7f788a718860>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,27 +133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -196,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f55f45a6a58>]"
+       "[<matplotlib.lines.Line2D at 0x7f788a685278>]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,21 +212,21 @@
     "v_1b = iss.loc[tt,'v_{x1}']\n",
     "#t_1b = iss.loc[tt,'t'] #Uncessary \n",
     "\n",
-    "plt.plot(t_1,v_1)  #red on the plot is the new part to be analyzed\n"
+    "plt.plot(t_1,v_1b)  #red on the plot is the new part to be analyzed\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f55f451f278>]"
+       "[<matplotlib.lines.Line2D at 0x7f788a6a80b8>]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,30 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    0.066733\n",
-      "2    0.133467\n",
-      "3    0.200200\n",
-      "4    0.266934\n",
-      "5    0.333667\n",
-      "6    0.400400\n",
-      "7    0.467134\n",
-      "Name: t, dtype: float64\n",
-      "0         NaN\n",
-      "1    0.356743\n",
-      "2    0.359856\n",
-      "3    0.361713\n",
-      "4    0.367199\n",
-      "5    0.367139\n",
-      "6    0.368053\n",
-      "7    0.374446\n",
-      "dtype: float64\n"
+      "0.36502132813347016\n",
+      "0.4044250416822314\n"
      ]
     },
     {
@@ -340,21 +304,22 @@
     "plt.plot(t_1, p_1)\n",
     "plt.plot(t_2, p_2)\n",
     "\n",
-    "print(t_1.loc[range(1,8)])\n",
-    "print(p_1)"
+    "#print(t_1.loc[range(1,8)])\n",
+    "#print(p_1)\n",
+    "print(numpy.mean(p_1))\n",
+    "print(numpy.mean(p_2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n",
-      "0.0401 x + 0.3543\n"
+      "[1.28883342e-05]\n"
      ]
     },
     {
@@ -377,7 +342,8 @@
     "p_1 = p_1.loc[range(1,8)]\n",
     "\n",
     "\n",
-    "line = numpy.polyfit(t_1.loc[range(1,8)],p_1.loc[range(1,8)],1)\n",
+    "#https://stackoverflow.com/questions/15721053/whats-the-error-of-numpy-polyfit\n",
+    "line, res, _, _, _ = numpy.polyfit(t_1.loc[range(1,8)],p_1.loc[range(1,8)],1, full=True)\n",
     "\n",
     "p = numpy.poly1d(line) #Do this to convert it into a usable form for plotting\n",
     "\n",
@@ -395,7 +361,7 @@
     "plt.title(\"Plot of total momentum for balls before the collision\")\n",
     "ax.set_xlabel('time (s)')\n",
     "ax.set_ylabel('momentum (Include correct units here)')\n",
-    "print(p) #So you can see the form of the polynomial that was fitted. In this case it is y = mx + b\n",
+    "print(res) #So you can see the form of the polynomial that was fitted. In this case it is y = mx + b\n",
     "\n"
    ]
   },
