A0 changed to Ai

--- a/PythonCode/PH111X-4-Corinne.ipynb
+++ b/PythonCode/PH111X-4-Corinne.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "\n",
     "#For more information about propogating uncertainty for items that use addition or subtraction please see Lab 1. \n",
-    "delta_vA = v_Af - v_A0 #change in velocity \n",
-    "dvA = dv_A0 + dv_Af #propogation of uncertainty for velocity \n",
+    "delta_vA = v_Af - v_Ai #change in velocity \n",
+    "dvA = dv_Ai + dv_Af #propogation of uncertainty for velocity \n",
     "\n",
     "\n",
     "\n",
