added note about momentum being in lab 4

--- a/PythonCode/Lab 5 KE and P.ipynb
+++ b/PythonCode/Lab 5 KE and P.ipynb
@@ -41,10 +41,10 @@
     }
    ],
    "source": [
-    "\n",
+    "## For how to calulate the momentum see Lab 4 code\n",
     "\n",
     "### 3: Kinetic Energy\n",
-    "ke_i = (m * v_Ai * v_Ai) #initial momentum of the system\n",
+    "ke_i = (m * v_Ai * v_Ai) #initial kinetic energy of the system\n",
     "dke_i = ke_i * ((dm/m)+2*((dv_Ai)/abs(v_Ai))) #uncertainty in \"\n",
     "#Some notes on the above equation\n",
     "\n",
@@ -53,15 +53,17 @@
     "# that means (dv_A0+dv_B0)/abs(v_A0+v_B0))) corresponds to dy/abs(y) \" \n",
     "# p_0 corresponds to abs(A) in eq. 4 in Lab 1R. \n",
     "\n",
-    "ke_f = (m * v_Af) #final momentum of the system\n",
+    "ke_f = (m * v_Af) #final kinetic energy of the system\n",
     "\n",
     "dke_f = ke_f * ((dm/m)+((dv_Af)/abs(v_Af))) #uncertainty in \"\n",
     "\n",
-    "delta_ke = ke_f - ke_i #change in momentum\n",
+    "delta_ke = ke_f - ke_i #change in kinetic energy\n",
     "dke = dke_f + dke_i #uncertainty of \"\n",
-    "print(\"Intial Kinetic Energy:\",ke_i,\"±\",dke_i,\" Newtons\") #print the change in momentum and its uncertainty\n",
+    "print(\"Intial Kinetic Energy:\",ke_i,\"±\",dke_i,\" Newtons\") #print the change in \n",
+    "#kinetic energy and its uncertainty\n",
     "\n",
-    "print(\"Final Kinetic Energy:\",ke_f,\"±\",dke_f,\" Newtons\") #print the change in momentum and its uncertainty\n"
+    "print(\"Final Kinetic Energy:\",ke_f,\"±\",dke_f,\" Newtons\") #print the change in \n",
+    "#kinetic energy and its uncertainty\n"
    ]
   },
   {
