--- a/PythonCode/Lab 5 KE and P.ipynb
+++ b/PythonCode/Lab 5 KE and P.ipynb
@@ -2,37 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "### 1: velocity\n",
-    "v_Ai = 0.1 #initial velocity (from statistics analysis of velocity graph)\n",
+    "v_Ai = 0.5 #initial velocity (from statistics analysis of velocity graph)\n",
     "dv_Ai = 0.0001 #uncertainty of \"\n",
     "\n",
-    "v_Af = 0.2  #final velocity (from statistics analysis of velocity graph)\n",
-    "dv_Af = 0.0002 #uncertainty of \"\n",
+    "v_Bi = 0.0 #cart B at rest at beginning\n",
+    "dv_Bi = 0.0\n",
     "\n",
+    "v_Af = 0.13  #final velocity (from statistics analysis of velocity graph)\n",
+    "dv_Af = 0.01 #uncertainty of \"\n",
+    "\n",
+    "v_Bf = 0.4360\n",
+    "dv_Bf = 0.006 \n",
     "\n",
     "### 2: mass\n",
-    "m1 = 0.4975 #measured mass of the cart in kg\n",
-    "dm1 = 0.0001 #uncertainty in \"\n",
+    "mA = 0.4975 #measured mass of the cart in kg\n",
+    "dmA = 0.001 #uncertainty in \"\n",
     "\n",
-    "m2 = 0.50\n",
-    "dm2 = 0.001"
+    "mB = 0.50\n",
+    "dmB = 0.001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intial Velcro Kinetic Energy: 0.004975 ± 1.0950000000000002e-05  Newtons\n",
-      "Final Velcro Kinetic Energy: 0.1995 ± 0.0008381005025125629  Newtons\n"
+      "Intial Velcro Kinetic Energy: 0.0621875 ± 0.00014987500000000002  Newtons\n",
+      "Final Velcro Kinetic Energy: 0.0648375 ± 0.01023500163316583  Newtons\n"
      ]
     }
    ],
@@ -40,8 +45,9 @@
     "## For how to calulate the momentum see Lab 4 code\n",
     "\n",
     "### 3: Kinetic Energy for Velcro\n",
-    "ke_i = (m1 * v_Ai * v_Ai) #initial kinetic energy of the system\n",
-    "dke_i = ke_i * ((dm1/m1)+2*((dv_Ai)/abs(v_Ai))) #uncertainty in \"\n",
+    "ke_i = .5*(mA * v_Ai * v_Ai) #initial kinetic energy of the system\n",
+    "\n",
+    "dke_i = ke_i * ((dmA/mA)+(2*((dv_Ai)/abs(v_Ai)))) #uncertainty in \"\n",
     "#Some notes on the above equation\n",
     "\n",
     "#^^if only 1 cart (cart 1) is moving\n",
@@ -55,9 +61,9 @@
     "\n",
     "#This is for velcro KE calculation \n",
     "\n",
-    "ke_f = ((m1 + m2) * v_Af) #final kinetic energy of the system\n",
+    "ke_f = .5*((mA + mB) * v_Af) #final kinetic energy of the system\n",
     "\n",
-    "dke_f = ke_f * ((dm1/m1)+((dv_Af)/abs(v_Af))) + ke_f * ((dm2/m2)+((dv_Af)/abs(v_Af))) #uncertainty in \"\n",
+    "dke_f = ke_f * ((dmA/mA)+((dv_Af)/abs(v_Af))) + ke_f * ((dmB/mB)+((dv_Af)/abs(v_Af))) #uncertainty in \"\n",
     "\n",
     "delta_ke = ke_f - ke_i #change in kinetic energy\n",
     "dke = dke_f + dke_i #uncertainty of \"\n",
@@ -70,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intial Plunger Kinetic Energy: 0.004975 ± 1.0950000000000002e-05  Newtons\n",
-      "Final Plunger Kinetic Energy: 0.1 ± 0.00030000000000000003  Newtons\n"
+      "Intial Plunger Kinetic Energy: 0.0621875 ± 0.00014987500000000002  Newtons\n",
+      "Final Plunger Kinetic Energy: 0.051727875 ± 0.004082523057692308  Newtons\n"
      ]
     }
    ],
@@ -86,16 +92,14 @@
     "## For how to calulate the momentum see Lab 4 code\n",
     "\n",
     "### 3: Kinetic Energy for Plunger\n",
-    "ke_i = (m1 * v_Ai * v_Ai) #initial kinetic energy of the system\n",
-    "dke_i = ke_i * ((dm1/m1)+2*((dv_Ai)/abs(v_Ai))) #uncertainty in \"\n",
-    "#Some notes on the above equation\n",
-    "\n",
-    "#^^if only 1 cart (cart 1) is moving\n",
+    "ke_i = .5*(mA * v_Ai * v_Ai) #initial kinetic energy of the system\n",
+    "dke_i = ke_i * ((dmA/mA)+2*((dv_Ai)/abs(v_Ai))) #uncertainty in \"\n",
+    "#^^if only 1 cart (cart A) is moving\n",
     "\n",
     "\n",
     "#This is for plunger KE calculation \n",
     "\n",
-    "ke_f = (m2) * v_Af #final kinetic energy of the system\n",
+    "ke_f = .5*((mA) * v_Af *v_Af ) + .5*(mB * v_Bf *v_Bf) #final kinetic energy of the system\n",
     "\n",
     "dke_f = ke_f * ((dm2/m2)+((dv_Af)/abs(v_Af))) #uncertainty in \"\n",
     "\n",
